<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Bookshelf Manager</string>

    <string name="barcode">Barcode</string>
    <string name="about">About this App</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    
    <string name="label_detail">Detail</string>
    <string-array name="category_array">
        <item>Interesting</item>
        <item>Have read</item>
        <item>Reading</item>
        <item>leave..</item>
    </string-array>
    <string name="label_title">Title</string>
    <string name="button_register">Register</string>
    <string name="button_cancel">Cancel</string>
    <string name="default_title">Title</string>
    <string name="label_category">Category</string>
</resources>