<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" >

        <LinearLayout
            android:id="@+id/container_top_pane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <FrameLayout
                android:id="@+id/thumbnail_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/no_image"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/container_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:layout_gravity="right|center_vertical"
                android:orientation="vertical"
                android:layout_marginLeft="10dp" >
    


                <TextView
                    android:id="@+id/label_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_category" />
    

                <Spinner
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/container_top_pane"
            android:layout_marginTop="10dp"
            android:text="@string/label_title" />


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/label_title"
            android:layout_marginLeft="10dp"
            android:background="@android:color/background_light"
            android:text="@string/default_title"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/container_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/button_detail"
                android:src="@android:drawable/arrow_down_float"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    
    
    
            <TextView
                android:id="@+id/label_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/label_detail" />
        </LinearLayout>



        <Button
            android:id="@+id/button_register"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_detail"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/button_register" />


        <Button
            android:id="@+id/button_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/container_detail"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/button_cancel" />

    </RelativeLayout>

</ScrollView>